terraform/ecs.tf
resource "aws_ecs_task_definition" "app" {
    family = "${var.project_name}-task"
    network_mode = "awsvpc"
    requires_compatibilities = ["FARGATE"]
    cpu = "256"
    memory = "512"
    execution_role_arn = aws_iam_role.ecs_task_exec.arn

    container_definitions = jsonencode([
        {
            name = "app"
            image = var.container_image
            portMappings = [
                {
                    containerPort = 5000
                    hostPort = 5000
                    protocol = "tcp"
                }
            ]
            environment = [
                {
                    name = "MONGO_URI"
                    value = var.mongo_uri
                },
                {
                    name = "JWT_SECRET"
                    value = var.jwt_secret
                }
            ]
            logConfiguration = {
                logDriver = "awslogs"
                options = {
                    awslogs-group = aws_cloudwatch_log_group.app.name
                    awslogs-region = var.region
                    awslogs-stream-prefix = "ecs"
                }
            }
        }
    ])
}

resource "aws_ecs_service" "app" {
  name = "${var.project_name}-svc"
  cluster = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.app.arn
  launch_type = "FARGATE"
  desired_count = 1

  network_configuration {
    subnets = aws_subnet.public[*].id
    assign_public_ip = true
    security_groups = [aws_security_group.app.id]
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.app.arn
    container_name = "app"
    container_port = 5000
  }

  depends_on = [ aws_lb_listener.http ]
}
